# FunkyBoy

./: .gitmodules  Jenkinsfile  LICENSE  README.md
.github/workflows/: FunkyBoy-CI.yml  build-3ds.yml  build-core.yml  build-libretro.yml  build-psp.yml  build-sdl.yml  test.yml  update-child-projects.yml
.github/workflows/scripts/: build-3ds.sh  build-in-docker.sh  pack-macos-sdl.sh  update-android.sh
cmake-common/: CheckForThreadSupport.cmake  DetectOS.cmake  FindSDL2.cmake  FindSF2D.cmake  FindSFIL.cmake  FindSFTD.cmake  FunkyBoyVersion.cmake  Tools3DS.cmake
core/: CMakeLists.txt  README.md  library.cpp  library.h
core/source/cartridge/: cartridge.cpp  cartridge.h  header.h  mbc.h  mbc1.cpp  mbc1.h  mbc2.cpp  mbc2.h  mbc3.cpp  mbc3.h  mbc5.cpp  mbc5.h  mbc_none.cpp  mbc_none.h  rtc.cpp  rtc.h  status.cpp  status.h
core/source/controllers/: audio.h  audio_void.cpp  audio_void.h  autosave.h  controllers.cpp  controllers.h  display.h  display_void.cpp  display_void.h  joypad.h  joypad_void.cpp  joypad_void.h  serial.h  serial_null.cpp  serial_null.h
core/source/emulator/: apu.cpp  apu.h  cpu.cpp  cpu.h  emulator.cpp  emulator.h  gb_type.h  instructions.cpp  instructions.h  io_registers.cpp  io_registers.h  ppu.cpp  ppu.h  state_types.h
core/source/emulator/audio/: channel_base.cpp  channel_base.h  channel_envelope.cpp  channel_envelope.h  channel_four.cpp  channel_four.h  channel_one.cpp  channel_one.h  channel_three.cpp  channel_three.h  channel_tone.cpp  channel_tone.h  channel_two.h  channel_wave.cpp  channel_wave.h
core/source/exception/: read_exception.cpp  read_exception.h  state_exception.cpp  state_exception.h
core/source/instructions/: alu.cpp  alu.h  conditions.cpp  conditions.h  context.cpp  context.h  debug.cpp  debug.h  decoder.cpp  decoder.h  instruction_context.cpp  instruction_context.h  instructions.cpp  instructions.h  jumps.cpp  jumps.h  loads.cpp  loads.h  misc.cpp  misc.h  prefix.cpp  prefix.h  reads.cpp  reads.h  rot_shifts.cpp  rot_shifts.h  stack.cpp  stack.h  writes.cpp  writes.h
core/source/memory/: mbc.h  mbc1.cpp  mbc1.h  mbc2.cpp  mbc2.h  mbc_none.cpp  mbc_none.h  memory.cpp  memory.h  ppu_memory.cpp  ppu_memory.h
core/source/operands/: alu.cpp  alu.h  common.h  conditions.cpp  conditions.h  debug.cpp  debug.h  decoder.cpp  decoder.h  instruction_context.cpp  instruction_context.h  instruction_context_with_instructions.cpp  instructions.h  jumps.cpp  jumps.h  loads.cpp  loads.h  misc.cpp  misc.h  prefix.cpp  prefix.h  reads.cpp  reads.h  registry.cpp  registry.h  rot_shifts.cpp  rot_shifts.h  table_unprefixed_instructions.cpp  tables.h  writes.cpp  writes.h
core/source/palette/: dmg_palette.h  palette.cpp  palette.h
core/source/util/: configurable.h  debug.h  endianness.cpp  endianness.h  flags.cpp  flags.h  frame_executor.cpp  frame_executor.h  fs.h  gpumode.h  interrupt_type.h  membuf.h  os_specific.h  ramsizes.h  registers.cpp  registers.h  return_codes.h  romsizes.cpp  romsizes.h  serialization.h  stream_utils.h  string_polyfills.h  testing.h  typedefs.h
docs/: COMPATIBLE_GAMES.md  REFERENCES.md
platform-3ds/: .gitignore  CMakeLists.txt  DevkitArm3DS.cmake  README.md
platform-3ds/cmake_modules/: FindCTRULIB.cmake  FindJPEG.cmake  LibFindMacros.cmake  ToolsGBA.cmake
platform-3ds/source/: main.cpp
platform-3ds/source/controllers/: display_3ds.cpp  display_3ds.h  joypad_3ds.cpp  joypad_3ds.h
platform-libretro/: .gitignore  CMakeLists.txt  README.md
platform-libretro/include/: .gitignore
platform-libretro/source/: audio_libretro.cpp  audio_libretro.h  display_libretro.cpp  display_libretro.h  fb_libretro.info.in  joypad_libretro.cpp  joypad_libretro.h  main.cpp
platform-psp/: CMakeLists.txt  README.md
platform-psp/source/: callback.cpp  callback.h  main.cpp  user_input.cpp  user_input.h
platform-psp/source/controllers/: display_psp.cpp  display_psp.h  joypad_psp.cpp  joypad_psp.h
platform-sdl/: .gitignore  CMakeLists.txt  README.md  win32_appicon.rc
platform-sdl/scripts/: mac_os_create_icon.sh
platform-sdl/source/: main.cpp
platform-sdl/source/cli/: config.h
platform-sdl/source/controllers/: audio_sdl.cpp  audio_sdl.h  controllers_sdl.cpp  controllers_sdl.h  display_sdl.cpp  display_sdl.h  joypad_sdl.cpp  joypad_sdl.h  sdl_autosave.cpp  serial_sdl.cpp  serial_sdl.h
platform-sdl/source/sockets/: bsd_client.cpp  bsd_client.h  bsd_common.cpp  bsd_common.h  bsd_server.cpp  bsd_server.h  socket_exception.cpp  socket_exception.h  socket_interface.h
platform-sdl/source/ui/: file_picker.h  file_picker_cocoa.mm  file_picker_qt.cpp  file_picker_windows.cpp  native_ui.h  native_ui_cocoa.mm  native_ui_gtk.cpp  native_ui_qt.cpp  native_ui_windows.cpp
platform-sdl/source/window/: window.cpp  window.h
resources/: funkyboy_logo.xcf
test/: CMakeLists.txt  README.md
test/mooneye-test-roms/: .gitignore
test/source/: commons.cpp  commons.h  main.cpp  mbc_tests.cpp  mbc_tests.h  perf_mode.cpp  perf_mode.h  rom_cpu_instrs_tests.cpp  rom_cpu_instrs_tests.h  rom_mooneye_mbc1.cpp  rom_tests.cpp  rom_tests.h  unit_tests.cpp  unit_tests.h
test/source/blargg/: blargg_tests.h  commons.h  rom_cpu_instrs_tests.cpp  rom_cpu_instrs_tests.h
test/source/controllers/: controllers_test.cpp  controllers_test.h  serial_test.cpp  serial_test.h
test/source/mooneye/: commons.h  mooneye_tests.h  rom_acceptance.cpp  rom_acceptance.h  rom_acceptance_bits.cpp  rom_acceptance_bits.h  rom_acceptance_instr.cpp  rom_acceptance_instr.h  rom_mooneye_mbc1.cpp  rom_mooneye_mbc1.h  rom_mooneye_mbc2.cpp  rom_mooneye_mbc2.h  rom_mooneye_mbc5.cpp  rom_mooneye_mbc5.h
test/source/unit_tests/: rtc.cpp  save_states.cpp  unit_tests.cpp
test/source/util/: blargg_commons.h  commons.cpp  commons.h  membuf.h  mock_time.cpp  mock_time.h  mooneye_common.h  rom_commons.cpp  rom_commons.h
